--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -1,5 +1,8 @@
 user  nginx;
 worker_processes  {{ nginx_worker_processes }};
+{% if is_docker %}
+daemon off;
+{% endif %}
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
