--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -1,8 +1,5 @@
 user  nginx;
 worker_processes  {{ nginx_worker_processes }};
-{% if is_docker %}
-daemon off;
-{% endif %}
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
@@ -11,7 +8,7 @@ events {
 }
 
 http {
-    ssl_dhparam {{ nginx_common_ssl_path }}/dhparams.pem;
+    ssl_dhparam /etc/nginx/dhparams.pem;
     ssl_protocols {{ nginx_common_ssl_protocols }};
     ssl_ciphers '{{ nginx_common_ssl_ciphers }}';
     ssl_prefer_server_ciphers {{ 'on' if nginx_common_ssl_prefer_server_ciphers else 'off' }};
@@ -57,4 +54,3 @@ http {
 
     include /etc/nginx/conf.d/*.conf;
 }
-
